# add-thin

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
add_thin/: __init__.py  config.py  data.py  evaluate_utils.py  metrics.py  plots.py  tasks.py
add_thin/backbones/: classifier.py  cnn.py  embeddings.py
add_thin/diffusion/: model.py  utils.py
add_thin/distributions/: densities.py  intensities.py
add_thin/processes/: hpp.py
add_thin/utils/: __init__.py  callbacks.py  exceptions.py  logging.py  seed.py
config/: train.yaml
config/data/: data_set.yaml
config/hydra/: default.yaml
config/model/: add_thin.yaml
config/task/: density.yaml  forecast.yaml
notebooks/: evaluate_density.ipynb  evaluate_forecast.ipynb
